# nova-previs

./: .env.example  .gitignore  CLAUDE.md  Nova_Backlog.csv  Nova_File_Structure.md  Nova_PRD.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: api_contract.md  demo_video_script.md  design_system.md  error_ux.md  genblaze_feedback.md  manifest_schema.md  submission.md  user_test_script.md  wireframes.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
nova/agent/: __init__.py  cinematographer.py  compiler.py  refine.py  scene_breakdown.py  schema_retry.py
nova/api/: app.py  routes.py
nova/models/: __init__.py  project.py  shot_list.py  shot_spec.py  stage.py
nova/pipeline/: __init__.py  _runner.py  advance.py  animatic_stage.py  assembly.py  audio_stage.py  (+1 more)
schema/: shot_spec.schema.json
scripts/: export_shot_spec_schema.py  run_poller.py  setup_b2_bucket.py  setup_event_notification.py  verify_manifest.py
tests/: test_advance.py  test_animatic_and_audio_stages.py  test_api_generate_storyboard.py  test_api_projects.py  test_api_shot_lifecycle.py  test_assembly.py  test_b2_bucket_setup.py  test_b2_connection.py  test_cinematographer.py  test_compiler.py  test_end_to_end_pipeline.py  test_gemini_image_provider.py  test_image_fallback_and_refine.py  test_image_stage.py  test_keys.py  test_lock_webhook.py  test_manifest.py  test_refine_agent.py  test_scene_breakdown.py  test_schema_retry.py  test_shot_spec.py  test_stability_audio_provider.py
(+46 files in other folders)
