[project]
name = "nova"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint.per-file-ignores]
# truststore.inject_into_ssl() must run before requests/b2sdk are imported.
"tests/test_b2_connection.py" = ["E402"]
"tests/test_b2_bucket_setup.py" = ["E402"]
"scripts/setup_b2_bucket.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
